# test-multiple-def

./: CMakeLists.txt
liba/: CMakeLists.txt
liba/include/: a.h
liba/libmockca/: CMakeLists.txt
liba/libmockca/include/: mockc.h
liba/libmockca/src/: mockc.c
liba/src/: a.c
libb/: CMakeLists.txt
libb/include/: b.h
libb/libmockcb/: CMakeLists.txt
libb/libmockcb/src/: mockc.c
libb/src/: b.c
src/: main.c
